<resources>
    <string name="app_name">Shopping List</string>
    <string name="wKoszyku">In basket</string>
    <string name="zakonczZakupy">Finish shopping</string>
    <string name="doKupienia">To buy</string>
    <string name="wyslijListeSMSem">Send this list with SMS</string>
    <string name="wyslijListe">Send this list</string>
    <string name="nazwaPliku">Shopping_List</string>
    <string name="zaktualizujListe">Update list</string>
    <string name="pierwszeWyslanie">The image attached to the MMS contains the To buy list. Open the image from the MMS with Shopping List application to import.</string>
    <string name="potwierdzAktualizacje">Currenty newer version. Proceed anyway?</string>
    <string name="wyczyscListe">Clean list</string>
    <string name="produkty">Products</string>
    <string name="dodajProdukt">Add product</string>
    <string name="produkt">Item</string>
    <string name="nazwa">Name</string>
    <string name="sklep">Store</string>
    <string name="cena">Price</string>
    <string name="zaniechaj">Cancel</string>
    <string name="zachowaj">Save</string>
    <string name="uaktualnij">Update</string>
    <string name="usun">Remove</string>
    <string name="pierwszaLista">[[[\"Apples\",\"City Market\",\"2.41\"],[\"Bread\",\"Charlie\'s Bakery\",\"2.98\"],[\"Chocolate Bar\",\"Supa Maket\",\"2.11\"],[\"Cucumber\",\"City Market\",\"2.98\"],[\"Eggs\",\"City Market\",\"1.60\"],[\"Hand Soap\",\"Maria\'s Herbal Shop\",\"2.67\"],[\"Ketchup\",\"Supa Maket\",\"2.22\"],[\"Salad\",\"City Market\",\"2.48\"],[\"Shampoo\",\"Maria\'s Herbal Shop\",\"2.97\"],[\"Toothpaste\",\"Maria\'s Herbal Shop\",\"2.96\"]],[[\"Butter\",\"City Market\",\"2.98\"],[\"Cheese\",\"City Market\",\"2.47\"],[\"Milk\",\"City Market\",\"1.86\"],[\"Tomatoes\",\"City Market\",\"1.68\"],[\"Tea Bags\",\"Maria\'s Herbal Shop\",\"2.32\"],[\"Rice\",\"Supa Maket\",\"1.00\"],[\"Soda\",\"Supa Maket\",\"2.50\"]],[[\"Coffee\",\"Supa Maket\",\"8.48\"],[\"Towels\",\"Supa Maket\",\"4.97\"],[\"Cereal\",\"Supa Maket\",\"3.64\"],[\"Sugar\",\"Supa Maket\",\"2.38\"],[\"Pasta\",\"Supa Maket\",\"1.38\"]]]</string>
    <string name="pierwszeUruchomienie">Sample items have been added to the lists. Add a next one by swiping left and selecting Add product from menu.</string>
    <string name="pierwszyProdukt">You have just added first item! Select it to move it to To buy list or hold it to update it\'s price.</string>
    <string name="powroc">Back</string>
    <string name="uprawnienia">Permissions</string>
    <string name="uprawnieniaDoWczytaniaListy">Permissions required to import a list:</string>
    <string name="ustawienia">Settings</string>
    <string name="ogolne">General</string>
    <string name="wersjaAplikacji">Application version</string>
    <string name="trybNocny">Nightly mode</string>
    <string name="uruchomAplikacjePonownie">Restart application.</string>
    <string name="pokazInstrukcje">Show instructions</string>
    <string name="identyfikator">Id</string>
    <string name="wyczyscWszystko">Clean all</string>
    <string name="potwierdzCzyszczenie">All the lists and the items will be lost permanently.</string>
    <string name="tak">Yes</string>
    <string name="nie">No</string>
    <string name="zetony">Tokens</string>
    <string name="brakZetonow">No tokens :( Go to Settings.</string>
    <string name="zetonyZaReklame">Tokens for ad</string>
    <string name="przyznanoZetony">You received tokens: </string>
    <string name="komunikacja">Communicate</string>
    <string name="udostepniajCeny">Share prices</string>
    <string name="udostepnijAplikacje">Share this application</string>
    <string name="udostepnijTekst">Hi! Try out Shopping List for Android. Get it from Google Play:\n</string>
    <string name="inneAplikacje">Other applications</string>
    <string name="adresAPI">API address</string>
    <string name="aktywujRyzykowne">Activiate risky</string>
</resources>